<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HowToPlayActivity" >
    <TextView
        android:id="@+id/explanation_welcome"
        style="@style/TitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/explanation_welcome" />
    <TextView
        android:id="@+id/explanation_gcp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/explanation_welcome"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/explanation_gcp" />
    <TextView
        android:id="@+id/explanation_solo_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/explanation_gcp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/explanation_solo_game" />
    <TextView
        android:id="@+id/explanation_social_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/explanation_solo_game"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/explanation_social_game" />
    <TextView
        android:id="@+id/explanation_goodluck"
        style="@style/TitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/explanation_social_game"
        android:text="@string/explanation_goodluck" />
</RelativeLayout>