<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".PlayerNavFragment" >
    <Button
        android:id="@+id/empty_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@+id/go_forward_button"
        android:layout_toRightOf="@+id/go_left_button"
        android:gravity="center"
        android:visibility="invisible" />
    <Button
        android:id="@+id/go_right_button"
        style="@style/GameButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@+id/go_forward_button"
        android:layout_toRightOf="@+id/empty_button"
        android:gravity="center"
        android:text="@string/go_right_button" />
    <Button
        android:id="@id/go_left_button"
        style="@style/GameButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/go_forward_button"
        android:gravity="center"
        android:text="@string/go_left_button" />
    <TextView
        android:id="@+id/move_text"
        style="@style/InGameTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/move_title_text" />
    <Button
        android:id="@id/go_forward_button"
        style="@style/GameButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignLeft="@+id/empty_button"
        android:layout_below="@id/move_text"
        android:gravity="center"
        android:text="@string/go_forward_button" />
    <Button
        android:id="@+id/go_back_button"
        style="@style/GameButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@+id/empty_button"
        android:layout_toLeftOf="@+id/go_right_button"
        android:gravity="center"
        android:text="@string/go_back_button" />
</RelativeLayout>