<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cc000000"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GameScoresFragment" >
    <Button
        android:id="@+id/return_home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/return_home_button" />
    <TableLayout
        android:id="@+id/player_end_scores_table"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/return_home_button"
        android:stretchColumns="true" >
        <TableRow
            android:id="@+id/scores_title_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/player_handle_label"
                style="@style/InGameTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="center"
                android:text="@string/player_handle_label" />
            <TextView
                android:id="@+id/player_gems_label"
                style="@style/InGameTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="@string/player_gems_label" />
            <TextView
                android:id="@+id/player_mobs_killed_label"
                style="@style/InGameTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="@string/player_mobs_killed_label" />
            <TextView
                android:id="@+id/player_deaths_label"
                style="@style/InGameTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="@string/player_deaths_label" />
        </TableRow>
    </TableLayout>
    <TextView
        android:id="@+id/scores_retrieval_issue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scores_retrieval_issue"
        android:visibility="invisible" />
</RelativeLayout>