<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cc000000"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PreGameFragment" >
    <TextView
        android:id="@+id/game_players_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/game_players_text" />
    <Button
        android:id="@+id/leave_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/leave_game_button"
        android:visibility="invisible" />
    <Button
        android:id="@+id/start_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/leave_game_button"
        android:text="@string/start_game_button"
        android:visibility="invisible" />
    <Button
        android:id="@+id/cancel_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/leave_game_button"
        android:text="@string/cancel_game_button"
        android:visibility="invisible" />
    <TextView
        android:id="@+id/game_waiting_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/leave_game_button"
        android:text="@string/game_waiting_text"
        android:visibility="invisible" />
    <ListView
        android:id="@+id/game_players_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/start_game_button"
        android:layout_below="@id/game_players_text"
        android:layout_margin="4dp" />
</RelativeLayout>