<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AccountSelectionActivity" >
    <TextView
        android:id="@+id/choose_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/select_account_text" />
    <Button
        android:id="@+id/select_user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="4dp"
        android:onClick="selectUser"
        android:text="@string/select_user_button"
        android:visibility="invisible" />
    <ListView
        android:id="@+id/accounts_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_account"
        android:layout_centerHorizontal="true"
        android:choiceMode="singleChoice" />
    <EditText
        android:id="@+id/user_handle_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/select_user_button"
        android:hint="@string/enter_user_handle_text"
        android:visibility="invisible" />
    <TextView
        android:id="@+id/user_handle_view"
        style="@style/TitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/select_user_button"
        android:visibility="gone" />
</RelativeLayout>